<resources>
    <string name="app_name">Cockteals</string>
    <string name="gridview">View : Grid</string>
    <string name="language">Language</string>
    <string name="mode">Dark/Light mode</string>
    <string name="help">Help</string>
    <string name="title_activity_details">DetailsActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>

    <string name="app1">Cocktails</string>
    <string name="app2">Meals</string>
    <string name="random">Random</string>
    <string name="favorite">Favorites</string>


</resources>