<?xml version="1.0" encoding="utf-8"?>
<menu
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item android:id="@+id/search"
        android:title="@string/app_name"
        android:icon="@drawable/ic_baseline_search_24"
        app:showAsAction="collapseActionView|always"
        app:actionViewClass="androidx.appcompat.widget.SearchView"/>

    <item android:id="@+id/action_settings_mode"
        android:title="@string/gridview"
        app:showAsAction="never"/>

    <item android:id="@+id/action_settings_language"
        android:title="@string/language"
        app:showAsAction="never"/>

    <item android:id="@+id/action_settings_help"
        android:title="@string/help"
        app:showAsAction="never"/>
</menu>